# sequoia

./: .gitignore  Cargo.toml  README.md  output.txt
.helix/: languages.toml
sequoia/: Cargo.toml
sequoia/src/: ast.rs  interpreter.rs  lexer.rs  main.rs  parser.rs
src/: ast.rs  interpreter.rs  lexer.rs  main.rs  parser.rs
sycamore/: Cargo.toml  lexer.py  parser.py
