[package]
name = "sequoia"
version = "0.1.0"
authors = ["MrKomodoDragon <svrchn921@outlook.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.15.1"
chumsky = "0.11.1"
regex = "1.5"
ariadne = "0.1.5"
maplit = "1.0.2"
